--- a/registration/login.css
+++ b/registration/login.css
@@ -2,8 +2,11 @@ body{
   margin: 0;
   background: url(https://images.unsplash.com/photo-1482517967863-00e15c9b44be?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
   font-family: sans-serif;
-  background-size: cover;
+  background-size: auto;
   padding: 0;
+  /* background-size: contain; */
+  background-repeat: no-repeat;
+  /* background-size: 50%; */
 
 }
 .box{
